--- a/pchome.ipynb
+++ b/pchome.ipynb
@@ -227,10 +227,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import time\n",
+    "time.sleep(1)"
+   ]
   }
  ],
  "metadata": {
